[workspace]

members = [
    "cerk",
    "cerk_config_loader_file",
    "cerk_loader_file",
    "cerk_port_unix_socket",
    "cerk_port_health_check_http",
    "cerk_port_mqtt",
    "cerk_port_amqp",
    "cerk_router_broadcast",
    "cerk_router_rule_based",
    "cerk_runtime_threading",
    "examples",
]

exclude = [
    "docker/cerk-common",
    "integration-tests/reliable-amqp/cerk-amqp",
    "integration-tests/reliable-amqp/test-executor"
]
