[package]
name = "cerk_port_amqp"
version = "0.1.0"
authors = ["Fabrizio Lazzaretti <fabrizio@lazzaretti.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.7.1"
cerk = { path = "../cerk" }
cloudevents = { git = "https://github.com/ce-rust/rust-cloudevents/", branch = "feat/cloudevents-v1-refactored" }
serde_json = "1.0"
lapin = { version= "1.5.0" , features = [] , default-features = false }
async-global-executor = "1.4.3"
futures-lite = "1.11.2"
