[package]
name = "cerk_port_dummies"
version = "0.2.0"
authors = [
    "Linus Basig <linus@basig.me>",
    "Fabrizio Lazzaretti <fabrizio@lazzaretti.me>"
]
description = "This is a package for CERK. CERK is an open source CloudEvents Router written in Rust with a MicroKernel architecture."
license = "Apache-2.0"
repository = "https://github.com/ce-rust/cerk"
documentation = "https://github.com/ce-rust/cerk"
homepage = "https://github.com/ce-rust/cerk"
keywords = ["cloudevents", "router", "cerk"]
readme = "README.md"
edition = "2018"

[dependencies]
log = "0.4.0"
cerk = { version = "0.2.0", path = "../cerk" }
cloudevents-sdk = "0.3.0"
chrono = "0.4"
serde_json = "1.0"
