[package]
name = "cerk_port_dummies"
version = "0.2.11"
authors = [
    "Linus Basig <linus@basig.me>",
    "Fabrizio Lazzaretti <fabrizio@lazzaretti.me>"
]
description = "This is a package for CERK. CERK is an open source CloudEvents Router written in Rust with a MicroKernel architecture."
license = "Apache-2.0"
repository = "https://github.com/ce-rust/cerk"
documentation = "https://github.com/ce-rust/cerk"
homepage = "https://github.com/ce-rust/cerk"
keywords = ["cloudevents", "router", "cerk"]
readme = "README.md"
edition = "2021"

[dependencies]
log = "0.4.0"
env_logger = "0.8"
cerk = { version = "0.2", path = "../cerk" }
cloudevents-sdk = "0.7"
chrono = "0.4"
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "0.2", features = ["full"] }

[dev-dependencies]
cerk_runtime_threading = { version = "0.2", path = "../cerk_runtime_threading" }
ctor = "0.1"
