[package]
name = "cerk_port_health_check_http"
version = "0.2.1"
authors = [
    "Linus Basig <linus@basig.me>",
    "Fabrizio Lazzaretti <fabrizio@lazzaretti.me>"
]
description = "This is a package for CERK. CERK is an open source CloudEvents Router written in Rust with a MicroKernel architecture."
license = "Apache-2.0"
repository = "https://github.com/ce-rust/cerk"
documentation = "https://github.com/ce-rust/cerk"
homepage = "https://github.com/ce-rust/cerk"
keywords = ["cloudevents", "router", "cerk", "health-check"]
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.8"
cerk = { version = "0.2", path = "../cerk" }
anyhow = "1.0"
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
async-global-executor = "1.4.3"
futures-lite = "1.11.2"
uuid = { version = "0.8", features = ["v4"], default-features = false }
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
cerk_runtime_threading = { version = "0.2", path = "../cerk_runtime_threading" }
ctor = "0.1.16"
