[package]
name = "cerk_port_mqtt"
version = "0.1.0"
authors = ["Fabrizio Lazzaretti <fabrizio@lazzaretti.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.7.1"
cerk = { path = "../cerk" }
cloudevents-sdk = "0.3.0"
serde_json = "1.0"
paho-mqtt = {version="0.6.0", features=["bundled", "build_bindgen"], default-features = false}
