[package]
name = "cerk_port_mqtt"
version = "0.2.11"
authors = [
    "Linus Basig <linus@basig.me>",
    "Fabrizio Lazzaretti <fabrizio@lazzaretti.me>"
]
description = "This is a package for CERK. CERK is an open source CloudEvents Router written in Rust with a MicroKernel architecture."
license = "Apache-2.0"
repository = "https://github.com/ce-rust/cerk"
documentation = "https://github.com/ce-rust/cerk"
homepage = "https://github.com/ce-rust/cerk"
keywords = ["cloudevents", "router", "cerk", "mqtt"]
readme = "README.md"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.7"
cerk = { version = "0.2", path = "../cerk" }
cloudevents-sdk = "0.3"
serde_json = "1.0"
paho-mqtt = { version="0.8", features=["bundled", "build_bindgen"], default-features = false}
anyhow = "1.0"
async-std = "1.8"
unicode-ident = "=1.0.1"
