[package]
name = "cerk_port_mqtt_mosquitto"
version = "0.1.0"
authors = ["Linus Basig <linus@basig.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.7.1"
cerk = { version = "0.2", path = "../cerk" }
cloudevents-sdk = "0.3.0"
serde_json = "1.0"
mosquitto-client="0.1.5"
anyhow = "1.0"