[package]
name = "cerk_port_unix_socket"
version = "0.1.0"
authors = [
    "Linus Basig <linus@basig.me>",
    "Fabrizio Lazzaretti <fabrizio@lazzaretti.me>"
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.7.1"
cerk = { path = "../cerk" }
