[package]
name = "cerk_port_unix_socket"
version = "0.2.11"
authors = [
    "Linus Basig <linus@basig.me>",
    "Fabrizio Lazzaretti <fabrizio@lazzaretti.me>"
]
description = "This is a package for CERK. CERK is an open source CloudEvents Router written in Rust with a MicroKernel architecture."
license = "Apache-2.0"
repository = "https://github.com/ce-rust/cerk"
documentation = "https://github.com/ce-rust/cerk"
homepage = "https://github.com/ce-rust/cerk"
keywords = ["cloudevents", "router", "cerk"]
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.7.1"
cerk = { version = "0.2", path = "../cerk" }
cloudevents-sdk = "0.7"
serde_json = "1.0.42"
anyhow = "1.0"

[dev-dependencies]
cerk_runtime_threading = { version = "0.2", path = "../cerk_runtime_threading" }
