[package]
name = "cerk_router_broadcast"
version = "0.1.0"
authors = [
    "Linus Basig <linus@basig.me>",
    "Fabrizio Lazzaretti <fabrizio@lazzaretti.me>"
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
cerk = { path = "../cerk" }
cloudevents = { git = "https://github.com/ce-rust/rust-cloudevents/", branch = "feat/cloudevents-v1" }
