[package]
name = "cerk_examples"
version = "0.1.0"
authors = [
    "Linus Basig <linus@basig.me>",
    "Fabrizio Lazzaretti <fabrizio@lazzaretti.me>"
]
description = "This is a package for CERK. CERK is an open source CloudEvents Router written in Rust with a MicroKernel architecture."
license = "Apache-2.0"
repository = "https://github.com/ce-rust/cerk"
documentation = "https://github.com/ce-rust/cerk"
homepage = "https://github.com/ce-rust/cerk"
keywords = ["cloudevents", "router"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hello_world"
path = "src/hello_world/main.rs"
[[bin]]
name = "unix_socket"
path = "src/unix_socket/main.rs"
[[bin]]
name = "sequence_to_mqtt"
path = "src/mqtt/sequence_to_mqtt/main.rs"
[[bin]]
name = "unix_socket_and_mqtt_on_armv7"
path = "src/unix_socket_and_mqtt_on_armv7/main.rs"
[[bin]]
name = "mqtt-to-printer"
path = "src/mqtt/mqtt-to-printer/main.rs"


[dependencies]
log = "0.4.0"
env_logger = "0.7.1"
cerk = { path = "../cerk" }
cerk_runtime_threading = { path = "../cerk_runtime_threading" }
cerk_router_broadcast = { path = "../cerk_router_broadcast" }
cerk_port_dummies = { path = "../cerk_port_dummies" }
cerk_port_unix_socket = { path = "../cerk_port_unix_socket" }
cerk_port_mqtt = { path = "../cerk_port_mqtt" }
