[package]
name = "mqtt"
version = "0.1.0"
authors = ["Fabrizio Lazzaretti <fabrizio@lazzaretti.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.7.1"
cerk = "0.2.3"
cerk_config_loader_file = "0.2.0"
cerk_loader_file = "0.2.1"
cerk_runtime_threading = "0.2.1"
cerk_router_broadcast = "0.2.1"
cerk_port_dummies = "0.2.5"
cerk_port_health_check_http = "0.2.1"
cerk_port_mqtt_mosquitto = { path = "../../../cerk_port_mqtt_mosquitto" }
