[package]
name = "test-executor"
version = "0.1.0"
authors = ["Fabrizio Lazzaretti <fabrizio@lazzaretti.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.7.1"
lapin = { version= "1.5.0" , features = [] , default-features = false }
amq-protocol-types = { version= "6.0.1" }
async-global-executor = "1.4.3"
futures-lite = "1.11.2"
ctor = "0.1.16"
anyhow = "1.0"
